--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,27 +18,42 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./styles/main.css" />
 
     <title>Frontend Mentor | Blog preview card</title>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              background: "hsl(47, 88%, 63%)",
-              white: "hsl(0, 0%, 100%)",
-              grey: "hsl(0, 0%, 50%)",
-              black: "hsl(0, 0%, 7%)",
-            },
-            fontFamily: {
-              figtree: ['"Figtree"', ...defaultTheme.fontFamily.sans],
-            },
-          },
-        },
-      };
-    </script>
   </head>
   <body>
-    
+    <div class="main-container">
+      <div class="container">
+        <div class="inner-container">
+          <div class="image-container">
+            <img
+              src="./assets/images/illustration-article.svg"
+              alt=""
+              class="image"
+            />
+          </div>
+          <div class="content">
+            <div>
+              <span class="tag">Learning</span>
+              <span class="published-date">Published 21 Dec 2023</span>
+            </div>
+            <h1 class="title">HTML & CSS foundations</h1>
+            <p class="description">
+              These languages are the backbone of every website, defining
+              structure, content, and presentation
+            </p>
+          </div>
+          <div class="profile">
+            <img
+              src="./assets/images/image-avatar.webp"
+              alt=""
+              class="avatar"
+            />
+            <h2 class="username">Greg Hooper</h2>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
